speed up CSRList.reverse and nodal adjacency generation

--- a/src/makefile
+++ b/src/makefile
@@ -3,7 +3,9 @@
 #LIBS=-L/home/zezhao/usr/local/metis-5.1.0/lib/ -L/home/zezhao/usr/local/gtest/lib/
 
 FLAGS=-std=c++17
-FLAGS+=-O3 -g #-fsanitize=address #-pg
+FLAGS+=-O3 -g 
+#FLAGS+=-pg 
+#FLAGS+=-fsanitize=address
 CC=g++
 
 all: mp
