improve portibility on MPI

--- a/src/make.config
+++ b/src/make.config
@@ -1,5 +1,59 @@
 
-HOSTNAME=`hostname`
+HOSTNAME=$(shell hostname)
+
+#USE_OMPI=0
+#USE_MPICH=0
+#USE_INTEL=0
+
+sys_macos=$(shell echo ${HOSTNAME} | grep -i mac)
+ifneq (${sys_macos}, )
 USE_OMPI=1
-USE_MPICH=0
-USE_INTEL=0
+SYS=MACOS
+endif
+
+sys_desktop=$(shell echo ${HOSTNAME} | grep -i precision)
+ifneq (${sys_desktop}, )
+USE_OMPI=1
+SYS=LINUX/UBUNTU
+endif
+
+sys_stampede=$(shell echo ${HOSTNAME} | grep -i stampede)
+ifneq (${sys_stampede}, )
+USE_INTEL=1
+SYS=LINUX/CENTOS
+endif
+
+sys_rog=$(shell echo ${HOSTNAME} | grep -i rog)
+ifneq (${sys_rog}, )
+USE_MPICH=1
+SYS=LINUX/UBUNTU
+endif
+
+
+ifdef USE_OMPI
+
+CC=OMPI_CC=clang mpicc
+CXX=OMPI_CXX=clang++ mpicxx
+
+else ifdef USE_MPICH
+
+CC=mpicc -cc=clang
+CXX=mpicxx -cxx=clang++ 
+
+else ifdef USE_INTEL
+
+CC=mpicc -cc=clang
+CXX=mpicxx -cxx=clang++
+
+endif
+
+CC_DETAIL=$(shell ${CC} -show)
+CXX_DETAIL=$(shell ${CXX} -show)
+
+FLAGS=-std=c++17
+FLAGS+=-O2 -g
+#FLAGS+=-pg 
+#FLAGS+=-fsanitize=address
+
+LINK=
+LIBS=-lmetis -lgtest -lpthread -lhdf5 -lboost_program_options
