building HDF5File.hpp

--- a/src/make.config
+++ b/src/make.config
@@ -1,9 +1,6 @@
 
 HOSTNAME=$(shell hostname)
 
-#USE_OMPI=0
-#USE_MPICH=0
-#USE_INTEL=0
 
 sys_macos=$(shell echo ${HOSTNAME} | grep -i mac)
 ifneq (${sys_macos}, )
@@ -23,12 +20,13 @@ USE_INTEL=1
 SYS=LINUX/CENTOS
 endif
 
-sys_rog=$(shell echo ${HOSTNAME} | grep -i rog)
-ifneq (${sys_rog}, )
+sys_z590=$(shell echo ${HOSTNAME} | grep -i aorus)
+ifneq (${sys_z590}, )
 USE_MPICH=1
 SYS=LINUX/UBUNTU
 endif
 
+######################################################################################################
 
 ifdef USE_OMPI
 
